--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -106,6 +106,7 @@ DoubleClickTime=0.200000
 +ActionMappings=(ActionName="ScrollWeaponDown",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=MouseScrollDown)
 +ActionMappings=(ActionName="RMB",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=RightMouseButton)
 +ActionMappings=(ActionName="Shield",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=PageUp)
++ActionMappings=(ActionName="Bolt",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=LeftShift)
 +AxisMappings=(AxisName="Move Forward / Backward",Scale=1.000000,Key=Z)
 +AxisMappings=(AxisName="Move Forward / Backward",Scale=-1.000000,Key=S)
 +AxisMappings=(AxisName="Move Forward / Backward",Scale=1.000000,Key=Up)
